Fix: fix vertical responsive and footer spacing

--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,9 @@ main {
     justify-content: space-between;
     align-items: center;
     color: var(--primary-text-color);
+    
+    position: sticky;
+    z-index: 1;
 }
 
 #footer img {
@@ -398,15 +401,10 @@ main {
 
 #footer .music-ctr {
     height: 100%;
-    min-width: 150px;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-}
-
-#footer .music-ctr i {
-    font-size: 1rem;
-    margin: 0 5px;
+    flex-grow: 1;
 }
 
 #footer #play i {
